@@ -70,9 +70,9 @@
 	<li><a href='#mxmlNewReal'><tt>mxmlNewReal()</tt></a> </li>
 	<li><a href='#mxmlNewText'><tt>mxmlNewText()</tt></a> </li>
 	<li><a href='#mxmlNewTextf'><tt>mxmlNewTextf()</tt></a> </li>
-	<li><a href='#mxmlRelease'><tt>mxmlRelease()</tt></a> <span class='info'>&nbsp;Mini-XML 2.4&nbsp;</span></li>
+	<li><a href='#mxmlRelease'><tt>mxmlRelease()</tt></a> <span class='info'>&nbsp;Mini-XML 2.3&nbsp;</span></li>
 	<li><a href='#mxmlRemove'><tt>mxmlRemove()</tt></a> </li>
-	<li><a href='#mxmlRetain'><tt>mxmlRetain()</tt></a> <span class='info'>&nbsp;Mini-XML 2.4&nbsp;</span></li>
+	<li><a href='#mxmlRetain'><tt>mxmlRetain()</tt></a> <span class='info'>&nbsp;Mini-XML 2.3&nbsp;</span></li>
 	<li><a href='#mxmlSaveAllocString'><tt>mxmlSaveAllocString()</tt></a> </li>
 	<li><a href='#mxmlSaveFd'><tt>mxmlSaveFd()</tt></a> </li>
 	<li><a href='#mxmlSaveFile'><tt>mxmlSaveFile()</tt></a> </li>
@@ -87,7 +87,7 @@
 	<li><a href='#mxmlSetReal'><tt>mxmlSetReal()</tt></a> </li>
 	<li><a href='#mxmlSetText'><tt>mxmlSetText()</tt></a> </li>
 	<li><a href='#mxmlSetTextf'><tt>mxmlSetTextf()</tt></a> </li>
-	<li><a href='#mxmlSetWrapMargin'><tt>mxmlSetWrapMargin()</tt></a> <span class='info'>&nbsp;Mini-XML 2.4&nbsp;</span></li>
+	<li><a href='#mxmlSetWrapMargin'><tt>mxmlSetWrapMargin()</tt></a> <span class='info'>&nbsp;Mini-XML 2.3&nbsp;</span></li>
 	<li><a href='#mxmlWalkNext'><tt>mxmlWalkNext()</tt></a> </li>
 	<li><a href='#mxmlWalkPrev'><tt>mxmlWalkPrev()</tt></a> </li>
 </ul>
@@ -715,7 +715,7 @@ mxmlNewTextf(
 <h4>Returns</h4>
 <p>New node</p>
 <!-- NEW PAGE -->
-<h3 class='title'><span class='info'>&nbsp;Mini-XML 2.4&nbsp;</span><a name='mxmlRelease'>mxmlRelease()</a></h3>
+<h3 class='title'><span class='info'>&nbsp;Mini-XML 2.3&nbsp;</span><a name='mxmlRelease'>mxmlRelease()</a></h3>
 <h4>Description</h4>
 <p>Release a node.
 
@@ -759,7 +759,7 @@ mxmlRemove(
 <h4>Returns</h4>
 <p>Nothing.</p>
 <!-- NEW PAGE -->
-<h3 class='title'><span class='info'>&nbsp;Mini-XML 2.4&nbsp;</span><a name='mxmlRetain'>mxmlRetain()</a></h3>
+<h3 class='title'><span class='info'>&nbsp;Mini-XML 2.3&nbsp;</span><a name='mxmlRetain'>mxmlRetain()</a></h3>
 <h4>Description</h4>
 <p>Retain a node.
 
@@ -1118,7 +1118,7 @@ mxmlSetTextf(
 <h4>Returns</h4>
 <p>0 on success, -1 on failure</p>
 <!-- NEW PAGE -->
-<h3 class='title'><span class='info'>&nbsp;Mini-XML 2.4&nbsp;</span><a name='mxmlSetWrapMargin'>mxmlSetWrapMargin()</a></h3>
+<h3 class='title'><span class='info'>&nbsp;Mini-XML 2.3&nbsp;</span><a name='mxmlSetWrapMargin'>mxmlSetWrapMargin()</a></h3>
 <h4>Description</h4>
 <p>Set the the wrap margin when saving XML data.
 
